--- a/Web Technology Lab/Assignment 4/B/index.html
+++ b/Web Technology Lab/Assignment 4/B/index.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Color Array Manipulation</title>
 </head>
+
 <body>
   <h1>Assignment 4-B</h1>
-  
-  <script>
-    const colors = ["Red", "Green", "Blue"];
-    const userValue = prompt("Enter a color:");
-    if (!colors.includes(userValue)) {
-      colors.push(userValue);
-      alert(`${userValue} has been added to the array.`);
-    } else {
-      alert(`${userValue} is already present in the array.`);
-    }
-    console.log("Updated array of colors:", colors);
-  </script>
+
+  <script src="script.js"></script>
 </body>
+
 </html>
