--- a/Web Technology Lab/Assignment 5/A/index.html
+++ b/Web Technology Lab/Assignment 5/A/index.html
@@ -2,37 +2,7 @@
 <html>
 <head>
     <title>Append Row to Table</title>
-    <style>
-        table {
-            border-collapse: collapse;
-            width: 700px;
-            margin: 30px;
-        }
-
-        th, td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #f2f2f2;
-        }
-
-        input[type="text"] {
-            width: 640px;
-            padding: 5px;
-        }
-
-        #addRowButton {
-            margin: 10px;
-            padding: 5px 10px;
-            background-color: #008CBA;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <table id="myTable">
@@ -47,27 +17,7 @@
     </table>
     <button id="addRowButton">Add Row</button>
 
-    <script>
-        function addRow() {
-            var table = document.getElementById("myTable").getElementsByTagName('tbody')[0];
-            var newRow = table.insertRow(table.rows.length);
-            
-            var nameInput = document.createElement("input");
-            nameInput.type = "text";
-            nameInput.placeholder = "Enter Name";
+    <script src="script.js"></script>
 
-            var ageInput = document.createElement("input");
-            ageInput.type = "text";
-            ageInput.placeholder = "Enter Age";
-
-            var cell1 = newRow.insertCell(0);
-            var cell2 = newRow.insertCell(1);
-
-            cell1.appendChild(nameInput);
-            cell2.appendChild(ageInput);
-        }
-
-        document.getElementById("addRowButton").addEventListener("click", addRow);
-    </script>
 </body>
 </html>
