--- a/Web Technology Lab/Assignment 4/A/index.html
+++ b/Web Technology Lab/Assignment 4/A/index.html
@@ -8,23 +8,6 @@
 <body>
     <h1 style="font-size: 4rem;">Click the button to change the background color!</h1>
     <button id="changeColorButton" style="font-size: 2rem;">Change Color</button>
-    <script>
-        function getRandomColor() {
-            const letters = '0123456789ABCDEF';
-            let color = '#';
-            for (let i = 0; i < 6; i++) {
-                color += letters[Math.floor(Math.random() * 16)];
-            }
-            return color;
-        }
-
-        function changeBackgroundColor() {
-            const newColor = getRandomColor();
-            document.body.style.backgroundColor = newColor;
-        }
-
-        const button = document.getElementById('changeColorButton');
-        button.addEventListener('click', changeBackgroundColor);
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
